Fixed Row horizontal aligns

--- a/src/row.css
+++ b/src/row.css
@@ -24,11 +24,11 @@
 }
 
 .ts-row.is-start-aligned {
-    align-items: flex-start;
+    justify-content: flex-start;
 }
 
 .ts-row.is-end-aligned {
-    align-items: flex-end;
+    justify-content: flex-end;
 }
 
 .ts-row .column.is-middle-aligned {
